--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
     "@react-navigation/native-stack": "^7.3.26",
     "react": "19.1.0",
     "react-native": "0.81.4",
+    "react-native-reanimated": "^4.1.2",
     "react-native-safe-area-context": "^5.5.2",
     "react-native-screens": "^4.16.0",
-    "react-native-svg": "^15.13.0"
+    "react-native-svg": "^15.13.0",
+    "react-native-worklets": "^0.6.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
