--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "@react-navigation/elements": "^2.6.4",
     "@react-navigation/native": "^7.1.17",
     "@react-navigation/native-stack": "^7.3.26",
+    "@tanstack/react-query": "^5.90.2",
     "react": "19.1.0",
     "react-native": "0.81.4",
+    "react-native-config": "^1.5.9",
     "react-native-reanimated": "^4.1.2",
     "react-native-safe-area-context": "^5.5.2",
     "react-native-screens": "^4.16.0",
