--- a/package.json
+++ b/package.json
@@ -16,9 +16,9 @@
     "@react-navigation/native": "^7.1.17",
     "@react-navigation/native-stack": "^7.3.26",
     "@tanstack/react-query": "^5.90.2",
+    "jotai": "^2.15.0",
     "react": "19.1.0",
     "react-native": "0.81.4",
-    "react-native-config": "^1.5.9",
     "react-native-reanimated": "^4.1.2",
     "react-native-safe-area-context": "^5.5.2",
     "react-native-screens": "^4.16.0",
@@ -42,6 +42,7 @@
     "eslint": "^8.19.0",
     "jest": "^29.6.3",
     "prettier": "2.8.8",
+    "react-native-dotenv": "^3.4.11",
     "react-test-renderer": "19.1.0",
     "typescript": "^5.8.3"
   },
