--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-navigation/native": "^7.1.17",
     "@react-navigation/native-stack": "^7.3.26",
     "@tanstack/react-query": "^5.90.2",
+    "iso-639-1": "^3.1.5",
     "jotai": "^2.15.0",
     "react": "19.1.0",
     "react-native": "0.81.4",
